test_files/04-unexpected-input.stderr
error: custom attribute panicked
 --> test_files/04-unexpected-input.rs:7:1
  |
7 | #[archive_impl(blah)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Unsupported meta `blah`: meta can only be structure list `bound(...)`
